CSS: More text overflow issues

--- a/css/content.less
+++ b/css/content.less
@@ -370,6 +370,11 @@
 					color: #FFF;
 					text-decoration: none;
 				}
+				p {
+					margin: 0;
+					overflow: hidden;
+					text-overflow: ellipsis;
+				}
 				.ideaStats {
 					margin: 5px -10px 0;
 				}
