--- a/css/idea.less
+++ b/css/idea.less
@@ -414,6 +414,10 @@
 					}
 				}
 			}
+			p {
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 			a.reply {
 				float: right;
 				margin-top: 0px;
